--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-moonwalk
+theme: jekyll-theme-moonwalk
 title: vlopezb0's homepage
 description: Bookmark this to keep an eye on my project updates!
