--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-remote_theme: moonwalk
+remote_theme: abhinavs/moonwalk
 title: vlopezb0's homepage
 description: Bookmark this to keep an eye on my project updates!
